--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "firebase": "^9.17.1",
     "framer-motion": "^8.4.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
