admin panel done

--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "aos": "^2.3.4",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
+    "faker": "^6.6.6",
     "firebase": "^9.17.1",
     "framer-motion": "^8.4.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-multi-carousel": "^2.8.2",
